fix sidebar overflow

--- a/css/menu.css
+++ b/css/menu.css
@@ -62,7 +62,6 @@
     z-index: 99;
     width: 0;
     height: 100%;
-    padding: 50px 0 5px 0;
 }
 
 #sidebar-wrapper.active {
@@ -77,7 +76,8 @@
 
 #menu-sidebar-container {
     width: 100%;
-    height: 100%;
+    height: 95%;
+    margin-top: 50px;
     overflow: scroll;
     scroll-behavior: smooth;  
     transition: 0.25s all ease;
